[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5"
glob = "0.3.0"
colored = "2.0.0"
anyhow = "1.0.57"
#tokio = "1.19.2"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
serde_yaml = "0.8.24"
rayon = "1.5.3"